--- a/style.css
+++ b/style.css
@@ -19,11 +19,13 @@
     padding: 10px;
     margin: auto;
 }
+	
 .header{
     z-index: 21474;
     font-family: 'Urbanist', sans-serif;
     color: black;
-    background-color: orange;
+	animation: rainbow-bg 2.5s linear;
+		animation-iteration-count: infinite;
     transition-duration :990ms ;
     /*固定*/
     position: fixed;
@@ -221,4 +223,43 @@ margin: 5px;
 
 .admax-ads{
 	
+}
+
+@keyframes rainbow-bg{
+		100%,0%{
+			background-color: rgb(255,0,0);
+		}
+		8%{
+			background-color: rgb(255,127,0);
+		}
+		16%{
+			background-color: rgb(255,255,0);
+		}
+		25%{
+			background-color: rgb(127,255,0);
+		}
+		33%{
+			background-color: rgb(0,255,0);
+		}
+		41%{
+			background-color: rgb(0,255,127);
+		}
+		50%{
+			background-color: rgb(0,255,255);
+		}
+		58%{
+			background-color: rgb(0,127,255);
+		}
+		66%{
+			background-color: rgb(0,0,255);
+		}
+		75%{
+			background-color: rgb(127,0,255);
+		}
+		83%{
+			background-color: rgb(255,0,255);
+		}
+		91%{
+			background-color: rgb(255,0,127);
+		}
 }
